<resources>
    <string name="app_name">Clientes App</string>
    <string name="agregar">Agregar</string>
    <string name="agregarNuevo">Agregar Cliente</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminarCliente">Eliminar Cliente</string>
    <string name="lbl_apellidos">Apellido:</string>
    <string name="lbl_codigo">Codigo:</string>
    <string name="lbl_dui">DUI N°:</string>
    <string name="lbl_modopago">Modo de pago:</string>
    <string name="lbl_nombre">Nombre:</string>
    <string name="lbl_tipocliente">Tipo cliente:</string>
    <string name="lstapellidos">Apellido:</string>
    <string name="lstcodigo">Codigo:</string>
    <string name="lstdui">DUI:</string>
    <string name="lstformadepago">Forma de pago:</string>
    <string name="lstnombre">Nombre:</string>
    <string name="lsttipo">Tipo:</string>
    <string name="modificar">Modificar</string>
    <string name="modificarCliente">Modificar cliente</string>
    <string name="msg_agregado">Agregado</string>
    <string name="msg_llenarTodo">Favor llenar todos los campos</string>
    <string name="tipo_mayorista">Mayorista</string>
    <string name="tipo_minorista">Minorista</string>
    <string-array name="tipo_cliente">
        <item>Credito</item>
        <item>Contado</item>
        <item>Anticipado</item>
    </string-array>
</resources>
