<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlHighlight"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingTop="16dp"
    tools:context="leonel.example.com.clienteapp.ModificarClienteActivity">

    <TextView
        android:id="@+id/codigoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_codigo"></TextView>

    <EditText
        android:id="@+id/codigoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"
        android:textColor="@android:color/background_dark"></EditText>

    <TextView
        android:id="@+id/duiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_dui"></TextView>

    <EditText
        android:id="@+id/duiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColor="@android:color/background_dark"></EditText>

    <TextView
        android:id="@+id/nombreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_nombre"></TextView>

    <EditText
        android:id="@+id/nombreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColor="@android:color/background_dark"></EditText>

    <TextView
        android:id="@+id/apellidoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_apellidos"></TextView>

    <EditText
        android:id="@+id/apellidoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"></EditText>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_tipocliente"></TextView>

    <RadioGroup
        android:id="@+id/tipoRgbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbtnMinorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/tipo_minorista"></RadioButton>

        <RadioButton
            android:id="@+id/rbtnMayorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/tipo_mayorista"></RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_modopago"></TextView>

    <Spinner
        android:id="@+id/opcionSpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:entries="@array/tipo_cliente"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="modificarCliente"
            android:text="@string/modificar"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="0.79"
            android:text="@string/cancelar"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>