<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlHighlight"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingTop="16dp"
    tools:context="leonel.example.com.clienteapp.CrearClienteActivity">

    <TextView
        android:id="@+id/codigoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_codigo"></TextView>

    <EditText
        android:id="@+id/codigoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"
        android:textColor="@android:color/background_dark"></EditText>

    <TextView
        android:id="@+id/duiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_dui"></TextView>

    <EditText
        android:id="@+id/duiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|numberSigned"
        android:textColor="@android:color/background_dark"></EditText>

    <TextView
        android:id="@+id/nombreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_nombre"></TextView>

    <EditText
        android:id="@+id/nombreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColor="@android:color/background_dark"></EditText>

    <TextView
        android:id="@+id/apellidoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_apellidos"></TextView>

    <EditText
        android:id="@+id/apellidoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"></EditText>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_tipocliente"></TextView>

    <RadioGroup
        android:id="@+id/tipoRgbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbtnMinorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/tipo_minorista"
            android:textColor="@android:color/background_dark"></RadioButton>

        <RadioButton
            android:id="@+id/rbtnMayorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/tipo_mayorista"
            android:textColor="@android:color/background_dark"></RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_modopago"></TextView>

    <Spinner
        android:id="@+id/opcionSpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:entries="@array/tipo_cliente" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="crearCliente"
        android:text="@string/agregar"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp" />

</LinearLayout>